--- a/Views/Cars/List.cshtml
+++ b/Views/Cars/List.cshtml
@@ -13,7 +13,8 @@
     <title>List</title>
 </head>
 <body>
-    <h2> All cars </h2>
+    <h1> Все автомобили </h1>
+    <h3>@ViewBag.Category</h3>
     @{ 
         foreach( var car in Model)
         {
